--- a/apartado/apartado.html
+++ b/apartado/apartado.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBVA</title>    
+    <title>BBVA</title>
     <link rel="stylesheet" href="estilo_apartado.css">
 </head>
+
 <body>
-    <h1>Bienvenido a BBVA</h1>
-    <button>Depositar</button>
-    <button>Ir a la página de inicio</button>
+    <main>
+        <h1>Bienvenido a BBVA</h1>
+        <div class="botones">
+            <button class="btn-depositar" onclick="location.href='../deposito/deposito.html'">Depositar</button>
+            <button class="btn-regresar" onclick="location.href='../indice/index.html'">Ir a la página de inicio</button>
+        </div>
+    </main>
 </body>
+
 </html>
